[package]
name = "mozaik-gateway"
version = "0.1.0"
edition = "2021"
authors = [
    "Michiel Van Kenhove <michiel.vankenhove@ugent.be>",
    "Jerico Moeyersons <jerico.moeyersons@ugent.be>",
    "MOZAIK project <mozaik@esat.kuleuven.be>",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
# serde_json = "1.0.113"
rocket = { version = "0.5.0", features = ["json"] }
libmozaik_iot = { path = "../libmozaik_iot" }
